# NexusTradeAI

./: .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  AGENT.md  AGENTS.md  AI_IMPLEMENTATION_ROADMAP.md  ARCHITECTURE-ANALYSIS.md  AUTOMATED_TRADING_GUIDE.md  BANKING_INTEGRATION_GUIDE.md  BROKER_SETUP_GUIDE.md  CHECK_STATUS.sh  CLAUDE.md  EDGE_FINDINGS.md  FEATURE_TRACKER.md  NexusTradeAI.code-workspace  RAILWAY_DEPLOY.md  README.md  REALISTIC_DASHBOARD_INTEGRATION_GUIDE.md  START_ALL_SERVICES.sh  START_BOT_MANAGED.sh  START_BOT_PM2.sh  START_ORB_BOT.sh  STOP_ALL_SERVICES.sh  STOP_SERVICES_PM2.sh  automation-server.js  docker-compose.yml  ecosystem.config.js  enhanced-integration-server.js  enterprise-dashboard.html  jest.config.js  log-trading-session.sh  mock-market-data-server.js  monitor-positions.sh  package.json  platform-demo.js  realistic-dashboard.html  setup-broker.sh  setup.sh  start-lite.sh  (+9 more)
.claude/: settings.json
.husky/: pre-commit
ai-ml/: .gitignore  ML_ARCHITECTURE.md  README.md  app.py  main.py  main_simple.py  requirements.txt  run_scheduler.py
analysis/: InstitutionalExecutionAnalysis.md  UltimateSystemAnalysis.md
clients/: README.md
config/: ai-models-config.json  alpaca-config.json
data-infrastructure/: README.md
deployment/: ExecutionSummary.md
distribution/: 01-what-this-is.md  02-first-operator.md  03a-thread-edge-confirmed.md  03b-thread-edge-failed.md  03c-thread-extended.md  04-strategy-backlog.md  README.md
docs/: API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  CODEBASE_ORGANIZATION.md  ENHANCEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  OPERATIONS_GAP_REGISTER.md  PRODUCTION_DEPLOYMENT.md  RESTRUCTURE_PROPOSAL.md  SERVICES.md  TESTING_CHECKLIST.md  edge-candidates-2026-06.md  health-detailed-endpoint.md  system-architecture.html  (+1 more)
sdks/python/: README.md  pyproject.toml
sdks/python/nexustrade/: __init__.py  client.py
(+1482 files in other folders)
