[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexustrade-ai"
version = "0.1.0"
description = "Python SDK for the NexusTradeAI trade signal evaluation API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://nexus-dashboard-production-e6e6.up.railway.app"
Documentation = "https://nexus-dashboard-production-e6e6.up.railway.app/public-docs"
