[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexustrade-ai"
version = "0.1.0"
description = "Python SDK for the NexusTradeAI trade signal evaluation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "NexusTradeAI", email = "support@nexustradeai.com"},
]
keywords = ["trading", "ai", "trade-signals", "fintech", "stock-market", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://nexus-dashboard-production-e6e6.up.railway.app"
Documentation = "https://nexus-dashboard-production-e6e6.up.railway.app/public-docs"
Repository = "https://github.com/NexusTradeAI/nexustrade-python"
